// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`List > should render 1`] = `
<ul
  class="_root_5a05a4"
>
  <li
    class="_li_5a05a4"
  >
    <div
      class="_mainSection_5a05a4"
    >
      Test
    </div>
  </li>
  <li
    class="_li_5a05a4"
  >
    <div
      class="_mainSection_5a05a4"
    >
      Test
    </div>
  </li>
  <li
    class="_li_5a05a4"
  >
    <div
      class="_mainSection_5a05a4"
    >
      Test
    </div>
  </li>
  <li
    class="_li_5a05a4"
  >
    <div
      class="_mainSection_5a05a4"
    >
      Test
    </div>
  </li>
</ul>
`;

exports[`List > should render with subsection left 1`] = `
<ul
  class="_root_5a05a4"
>
  <li
    class="_li_5a05a4"
  >
    <div>
      <div
        class="_root_d51396"
        role="img"
        style="background-image: url();"
      />
    </div>
    <div
      class="_mainSection_5a05a4"
    >
      Test
    </div>
  </li>
  <li
    class="_li_5a05a4"
  >
    <div>
      <div
        class="_root_d51396"
        role="img"
        style="background-image: url();"
      />
    </div>
    <div
      class="_mainSection_5a05a4"
    >
      Test
    </div>
  </li>
  <li
    class="_li_5a05a4"
  >
    <div>
      <div
        class="_root_d51396"
        role="img"
        style="background-image: url();"
      />
    </div>
    <div
      class="_mainSection_5a05a4"
    >
      Test
    </div>
  </li>
  <li
    class="_li_5a05a4"
  >
    <div>
      <div
        class="_root_d51396"
        role="img"
        style="background-image: url();"
      />
    </div>
    <div
      class="_mainSection_5a05a4"
    >
      Test
    </div>
  </li>
</ul>
`;

exports[`List > should render with subsection right 1`] = `
<ul
  class="_root_5a05a4"
>
  <li
    class="_li_5a05a4"
  >
    <div>
      <div
        class="_root_d51396"
        role="img"
        style="background-image: url();"
      />
    </div>
    <div
      class="_mainSection_5a05a4"
    >
      Test
    </div>
    <div>
      <button
        aria-current="false"
        class="_root_0977c5 _root_3de4f3"
        data-variant="default"
        role="button"
        type="button"
      >
        <span
          class="_label_3de4f3"
        >
          Test
        </span>
      </button>
    </div>
  </li>
  <li
    class="_li_5a05a4"
  >
    <div
      class="_mainSection_5a05a4"
    >
      Test
    </div>
    <div>
      <button
        aria-current="false"
        class="_root_0977c5 _root_3de4f3"
        data-variant="default"
        role="button"
        type="button"
      >
        <span
          class="_label_3de4f3"
        >
          Test
        </span>
      </button>
    </div>
  </li>
  <li
    class="_li_5a05a4"
  >
    <div
      class="_mainSection_5a05a4"
    >
      Test
    </div>
    <div>
      <button
        aria-current="false"
        class="_root_0977c5 _root_3de4f3"
        data-variant="default"
        role="button"
        type="button"
      >
        <span
          class="_label_3de4f3"
        >
          Test
        </span>
      </button>
    </div>
  </li>
  <li
    class="_li_5a05a4"
  >
    <div
      class="_mainSection_5a05a4"
    >
      Test
    </div>
    <div>
      <button
        aria-current="false"
        class="_root_0977c5 _root_3de4f3"
        data-variant="default"
        role="button"
        type="button"
      >
        <span
          class="_label_3de4f3"
        >
          Test
        </span>
      </button>
    </div>
  </li>
</ul>
`;
